[tool.poetry]
name = "sqlalchemy2-test"
version = "0.1.0"
description = ""
authors = ["Olivier Philippon <olivier@dunsap.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "2.0.0b2"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.isort]
py_version = 310
profile = "black"
line_length = 119
multi_line_output = 3
# known_first_party = ["apps"]
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
